# globalcool

./: .env.example  .gitignore  ADMIN_SPLASHSCREEN_SUMMARY.md  README.md  delete_bookings.py  package-lock.json  package.json  populate_products.py  populate_real_data.py  pyproject.toml  requirements.txt  run_tests.py  simple_populate_data.py  tailwind.config.js
apps/blog/: views.py
apps/core/: context_processors.py  forms.py  models.py  urls.py  views.py
apps/leads/: admin.py  forms.py  models.py  urls.py  views.py
apps/portfolio/: admin.py  forms.py  models.py  views.py
apps/services/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/: admin.py  forms.py  models.py  tests_splashscreen.py  urls.py  views.py
config/: settings.py  urls.py
docs/: admin-dashboard.md  admin-redesign.md  admin-splashscreen.md  agents.md  animation.md  architecture.md  backend.md  customer-management.md  design.md  frontend.md  instruction.md  mock.md  prd.md  redis-setup.md  system.md  wireframe-admin.md  wireframe-client.md  wireframe.md
scripts/: create_sample_categories.py  delete_services_products.py
static/admin-css/: style.css
static/admin-js/: main.js
static/css/: input.css  output.css
staticfiles/css/: output.css
templates/: test.html
templates/admin/: 404.html  admin_base.html  booking_detail.html  bookings_list.html  customer_delete.html  customer_detail.html  customer_form.html  customers_list.html  dashboard.html  lead_detail.html  leads_list.html  login.html  portfolio_delete.html  portfolio_detail.html  portfolio_form.html  portfolio_list.html  product_delete.html  product_detail.html  product_form.html  profile.html  quotation_delete.html  quotation_detail.html  quotation_form.html  quotation_send_email.html  quotations_list.html  service_delete.html  service_detail.html  service_form.html  services_products.html  settings_account.html  settings_email_templates.html  settings_general.html  settings_preferences.html  settings_security.html  settings_user_delete.html  settings_user_form.html  settings_user_management.html  signup.html  splashscreen.html  test_redesign.html  (+1 more)
(+55 files in other folders)
